--- a/Crecendo-2024-Refurbished/.pathplanner/settings.json
+++ b/Crecendo-2024-Refurbished/.pathplanner/settings.json
@@ -2,11 +2,7 @@
   "robotWidth": 0.9,
   "robotLength": 0.9,
   "holonomicMode": true,
-  "pathFolders": [
-    "New Folder",
-    "New New Folder",
-    "DriveStraight Score"
-  ],
+  "pathFolders": [],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
