--- a/Crecendo-2024-Refurbished/.gitignore
+++ b/Crecendo-2024-Refurbished/.gitignore
@@ -174,5 +174,8 @@ out/
 # Simulation data log directory
 logs/
 
+# Version file
+src\main\java\frc\robot\BuildConstants
+
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
